# declaritive-webgl

./: .gitignore  LICENSE  README.md  package.json  server.js  tsconfig.json  webpack.config.js
runtime/: Cargo.toml
runtime/src/: lib.rs  render_loop.rs
runtime/src/math/: matrices.rs
runtime/src/render/: api.rs  builder.rs  constants.rs  data.rs  drawwable.rs  mod.rs
runtime/src/rendering/: mod.rs
runtime/src/ui/: mod.rs
scripts/: start.bash
shaders/: frag_shader.glsl  vert_shader.glsl
src/: index.tsx  style.css  webpack_modules.d.ts
src/base/types/: types.ts
src/hooks/: use_singleton_factory.ts
src/runtime/: load.ts  types.ts  use_runtime.ts
src/ui/canvas/: canvas.css  canvas.tsx
src/ui/measure/: measure.tsx  resize_observer_types.d.ts
src/ui/viewport/: viewport.css  viewport.tsx  viewport_dimensions.ts
