[package]
authors = ["Angus Thomsen"]
categories = ["wasm"]
description = "The runtime for my web application"
repository = "git@github.com:AKST/declaritive-webgl.git"
license = "MIT"
name = "webpack-demo"
readme = "./README.md"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.25"
js-sys = "0.3.22"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.22"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Text",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "WebGlShader",
  "WebGlUniformLocation",
  "Window",
]

[features]
default = ["console_error_panic_hook"]
